[gd_scene load_steps=19 format=3 uid="uid://dcejjbpocvsgw"]

[ext_resource type="Script" path="res://scenes/ui/menu/monsterpedia/monsterpedia_card.gd" id="1_35fyh"]
[ext_resource type="PackedScene" uid="uid://2f2c8xqvyuwd" path="res://scenes/component/random_stream_player_component.tscn" id="2_g8vls"]
[ext_resource type="AudioStream" uid="uid://c2c6j2nqkan58" path="res://assets/audio/switch1.ogg" id="3_hqcc5"]
[ext_resource type="AudioStream" uid="uid://bjxpqvf42v2cr" path="res://assets/audio/switch2.ogg" id="4_nrity"]
[ext_resource type="AudioStream" uid="uid://bngw6y0jomgyo" path="res://assets/audio/switch3.ogg" id="5_uqvcl"]
[ext_resource type="AudioStream" uid="uid://bd8553awliywb" path="res://assets/audio/switch4.ogg" id="6_3kg8c"]
[ext_resource type="AudioStream" uid="uid://o2ux77jaghra" path="res://assets/audio/switch5.ogg" id="7_5sxu7"]
[ext_resource type="AudioStream" uid="uid://cpittpv5j7pok" path="res://assets/audio/switch6.ogg" id="8_sbed6"]
[ext_resource type="AudioStream" uid="uid://b1a5eekmhv1jc" path="res://assets/audio/switch7.ogg" id="9_26r4r"]
[ext_resource type="AudioStream" uid="uid://b2fryfojk6rx2" path="res://assets/audio/switch8.ogg" id="10_a8xny"]
[ext_resource type="AudioStream" uid="uid://8ad6vtudaf4r" path="res://assets/audio/switch9.ogg" id="11_gnoov"]
[ext_resource type="AudioStream" uid="uid://blg5jw46ulqtu" path="res://assets/audio/switch10.ogg" id="12_vgc8p"]
[ext_resource type="Texture2D" uid="uid://cyckoobw2k7bg" path="res://scenes/game_object/experience_vial/experience_vial.png" id="13_lv3as"]
[ext_resource type="Texture2D" uid="uid://h3mxamv724yf" path="res://assets/enemies/basic_enemy.png" id="13_xnp2t"]

[sub_resource type="Animation" id="Animation_8kjts"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_sn5g2"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 2.07053, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dph4q"]
_data = {
"RESET": SubResource("Animation_8kjts"),
"selected": SubResource("Animation_sn5g2")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjap5"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.458824, 0.890196, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="MonsterPediaCard" type="PanelContainer" groups=["meta_upgrade_card"]]
custom_minimum_size = Vector2(170, 0)
offset_right = 198.0
offset_bottom = 175.0
pivot_offset = Vector2(75, 75)
script = ExtResource("1_35fyh")

[node name="ClickPlayerComponent" parent="." instance=ExtResource("2_g8vls")]
streams = Array[AudioStream]([ExtResource("3_hqcc5"), ExtResource("4_nrity"), ExtResource("5_uqvcl"), ExtResource("6_3kg8c"), ExtResource("7_5sxu7"), ExtResource("8_sbed6"), ExtResource("9_26r4r"), ExtResource("10_a8xny"), ExtResource("11_gnoov"), ExtResource("12_vgc8p")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dph4q")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 28
text = "Monster name"
vertical_alignment = 1
max_lines_visible = 2
visible_characters = 12

[node name="EnemyTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
texture = ExtResource("13_xnp2t")
expand_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"BlueOutlineLabel"
text = "Write some description here as you write a long description"
autowrap_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="HBoxHealth" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxHealth"]
layout_mode = 2
size_flags_horizontal = 15
size_flags_vertical = 5
theme_override_font_sizes/font_size = 16
text = "Hitpoints"

[node name="ProgressBarHitpoints" type="ProgressBar" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxHealth"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 15
size_flags_vertical = 5
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_gjap5")
step = 1.0
value = 0.5
show_percentage = false

[node name="HBoxSpeed" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxSpeed"]
layout_mode = 2
size_flags_horizontal = 15
size_flags_vertical = 5
theme_override_font_sizes/font_size = 16
text = "Speed"

[node name="ProgressBarSpeed" type="ProgressBar" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxSpeed"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 15
size_flags_vertical = 5
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_gjap5")
step = 1.0
value = 0.5
show_percentage = false

[node name="HBoxAcceloration" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxAcceloration"]
layout_mode = 2
size_flags_horizontal = 15
size_flags_vertical = 5
theme_override_font_sizes/font_size = 16
text = "Acceloration"

[node name="ProgressBarAcceloration" type="ProgressBar" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxAcceloration"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 15
size_flags_vertical = 5
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_gjap5")
step = 1.0
value = 0.5
show_percentage = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 16
text = "Time to play to unlock"

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"BlueOutlineLabel"
text = "x0"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_gjap5")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Control"]
layout_mode = 2
offset_left = -8.0
offset_top = -5.0
offset_right = 8.0
offset_bottom = 11.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("13_lv3as")
